Priscilla/David's comments are in
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@221 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -1429,3 +1429,21 @@
 	primaryClass   = "hep-ex",
 	SLACcitation   = "%%CITATION = ARXIV:1410.1280;%%",
 }
+
+@article{Djouadi:2012zc,
+	author         = "Djouadi, Abdelhak and Falkowski, Adam and Mambrini, Yann
+	and Quevillon, Jeremie",
+	title          = "{Direct Detection of Higgs-Portal Dark Matter at the
+	LHC}",
+	journal        = "Eur.Phys.J.",
+	number         = "6",
+	volume         = "C73",
+	pages          = "2455",
+	doi            = "10.1140/epjc/s10052-013-2455-1",
+	year           = "2013",
+	eprint         = "1205.3169",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	reportNumber   = "LPT-ORSAY-12-42",
+	SLACcitation   = "%%CITATION = ARXIV:1205.3169;%%",
+}
