--- a/doc/tex/EWSpecificModels_Appendix.tex
+++ b/doc/tex/EWSpecificModels_Appendix.tex
@@ -57,7 +57,7 @@ S is a heavy scalar singlet and $\chiDM$ is a Dark Matter field.
 There is then an S channel diagram where DM pairs couple to the singlet field S, 
 which then mixes with a Higgs-sector field, and couples to W and Z bosons. 
 This diagram contains 2 insertions of EW symmetry breaking fields, 
-corresponding in form to the effective dimension-5 operator in the previous section.   
+corresponding in form to the effective dimension-5 operator in Section~\ref{sub:EW_EFT_Dim5}.   
 
 \section{Tabulated cross-sections}
 
