--- a/doc/tex/EWSpecificModels_SVMediators.tex
+++ b/doc/tex/EWSpecificModels_SVMediators.tex
@@ -162,15 +162,13 @@ for the simplified model
 \subsection{Scalar mediator exchanged in the \schannel}
 \label{sub:EW_Scalar}
 
-\Todo{Feynman diagram?}
+The parameters for the model with a scalar mediator exchanged in the $s-$ channel 
+follow those in Section~\ref{subsec:MonojetLikeModels}. 
 
-We recommend to generate this model for W, Z and photon searches 
-in order to reproduce the kinematics of the dimension-5 contact operator
-described in Section~\ref{sub:EW_EFT_Dim5} in a simplified model framework.
-Results can then be recast at the reinterpretation stage, by rescaling the cross-sections.  
-The scan in \mdm and \mMed should follow the one in Table~\ref{fig:DMV_EW_gamma_acceptance}, 
-although individual analyses may choose to reduce the granularity of the scan
-according to their expected sensitivity. 
+Even though the sensitivity of mono-boson searches to this model is low and it may not
+be in reach of early LHC searches, we recommend to generate this model for W, Z and photon searches 
+in order to reproduce the kinematics of contact interaction operators described in Section~\ref{sub:EW_EFT_Dim5}, 
+for later reinterpretation.  
 
 \subsection{Colored scalar mediator exchanged in the \tchannel}
 
@@ -204,15 +202,16 @@ for the simplified model with a colored scalar mediator exchanged in the $t-$cha
 \label{fig:TChan_EW_Zhad_acc}
 \end{figure}
 
-The parameter scan for the $t-$ channel model is still under discussion~\Todo{The parameter scan, 
+The parameter scan for the $t-$ channel model is still under discussion.~\Todo{The parameter scan, 
 	and the conclusions that can be drawn from the plots below, need to be
 	cross-checked with those in the monojet channel.}
 
-\subsection{Model implementation}
-
-These models are generated at leading
-order with MadGraph 2.2.2, using Pythia8 for the parton shower.
-Parameter cards can be found on the Forum SVN repository~\cite{ForumSVN_EW_DMV}.
-\Todo{Add models and instructions for other final states}.
+\newthought{Model implementation discussed in the appendix}
+%\subsection{Model implementation}
+%
+%These models are generated at leading
+%order with MadGraph 2.2.2, using Pythia8 for the parton shower.
+%Parameter cards can be found on the Forum SVN repository~\cite{ForumSVN_EW_DMV}.
+%\Todo{Add models and instructions for other final states}.
 
 
