--- a/doc/tex/MonojetLikeModels.tex
+++ b/doc/tex/MonojetLikeModels.tex
@@ -178,9 +178,10 @@ the EFT model should give the correct answer. \Todo{Refer to results of ongoing 
 \label{fig:monojet_mchichi}
 \end{figure}
 
-The conclusion is that the choice \gq=\gDM is a reasonable reduction
-in the parameter space since kinematic distributions are robust to
-changes in the specific values.   There are no complications associated
+Since kinematic distributions are robust to
+changes in the specific values of coupling, the choice of  \gq=\gDM is reasonable 
+to reduce the parameter space to be scanned. 
+There are no complications associated
 with small couplings, but, also, the early part of Run-1 will not be
 sensitive to them.  We recommend a range of couplings that limit the
 calculated width of the mediator to be near or below \mMed.
@@ -372,9 +373,11 @@ The presentation of the results in the $\gq$--$\gDM$ plane for fixed masses bene
 
 One of the simplest UV complete extensions of the effective field theory approach is the addition of a scalar/pseudoscalar mediator between DM and SM.
 A gauge singlet mediator can have tree-level interactions with a singlet DM particle that is either a Dirac or Majorana fermion, or DM that is a scalar itself. 
-The spin-$0$ mediator can either be a real or complex scalar; a complex scalar contains both scalar and pseudoscalar particles, whereas the real field only contains the scalar particle. See Refs.~\cite{Buckley:2014fba,Harris:2014hga} for a thorough discussion. One-loop diagrams leading to a \MET+X signature are shown in Fig.~\ref{fig:feyn_prod_S}.
+The spin-$0$ mediator can either be a real or complex scalar; a complex scalar contains both scalar and pseudoscalar particles, whereas the real field only contains the scalar particle.  Refs.~\cite{Buckley:2014fba,Harris:2014hga} contain a thorough discussion of these models. One-loop diagrams leading to a \MET+X signature are shown in Fig.~\ref{fig:feyn_prod_S}.
 In this document we consider only two of the possible choices for this simplified model: one where the interaction with the SM is mediated by a real scalar, 
-and the second where we consider only a pseudoscalar for which the associated scalar is assumed to be decoupled at higher energies. Note that this assumption does not hold in a UV complete model where the two components of the complex scalar mediator would be approximately degenerate.
+and the second where we consider only a pseudoscalar for which the associated scalar is assumed to be decoupled at higher energies. Note that this assumption does not hold in a UV complete model where the two components of the complex scalar mediator would be approximately degenerate. As stated in the Introduction of this document,
+these models are deemed sufficient as a starting point for early Run-2 searches, but the complex scalar case could be studied 
+separately in the case of heavy flavor final states given the sufficiently different kinematics. 
 
 Couplings to the SM fermions can be arranged by mixing with the SM Higgs. Such models have interesting connections with Higgs physics, and can be viewed as generalizations of the Higgs portal to DM. The most general scalar mediator models will have renormalizable interactions between the SM Higgs and the new scalar $\phi$ or pseudoscalar $a$, as well as $\phi/a$ interactions with electroweak gauge bosons. Such interactions are model dependent, often subject to constraints from electroweak precision tests, and would suggest specialized searches which cannot be generalized to a broad class of models (unlike, for instance, the $\MET+\textrm{jets}$ searches). As a result, for this class of minimal simplified models with spin-$0$ mediators, we will focus primarily on couplings to fermions and loop-induced couplings to gluons. %Possible couplings to the electroweak sector may also lead to interesting DM phenomenology that can be studied in the context of Higgs Portal DM.
 
@@ -511,7 +514,7 @@ For the mediator mass above twice the top quark mass $m_t$, the minimal width re
 
 It can be seen in Fig.~\ref{fig:monojet_kinematics_SP} that the kinematics for the scalar and pseudoscalar models coincides.
 For this reason, we recommend to only generate only one of the two models, and report the cross-sections on HEPData 
-\todo{Clarify shape of model repository} for the other one. No preference is given between the two models as they have the
+\Todo{Clarify shape of model repository} for the other one. No preference is given between the two models as they have the
 same kinematics, although it is worth pointing out that the pseudo-scalar model has been used for a Dark Matter interpretation of the DAMA signal 
 and of the galactic center excess~\cite{Arina:2014yna}.
 
