--- a/doc/tex/MonojetLikeModels_Appendix.tex
+++ b/doc/tex/MonojetLikeModels_Appendix.tex
@@ -345,7 +345,12 @@ This justifies it is sufficient to produce samples with up to 2 parton emissions
 \end{figure}
 
 
+\section{Simplified models for EW final states.}
 
+These models are generated at leading
+order with MadGraph 2.2.2, using Pythia8 for the parton shower.
+Parameter cards can be found on the Forum SVN repository~\cite{ForumSVN_EW_DMV}.
+\Todo{Add models and instructions for other final states}.
 
 \section{Model implementation for mono-Higgs models}
 
