--- a/doc/tex/Presentation_Of_Experimental_Results.tex
+++ b/doc/tex/Presentation_Of_Experimental_Results.tex
@@ -45,8 +45,8 @@ This section lists information necessary in order to reimplement an analysis. An
 \section{Simplified model interpretations}
 The analyses almost always provide at least one simplified model interpretation along with the search results. These interpretations are simple and can be used in order to take a quick survey of viability of parameter space. Codes such as~\cite{Kraml:2013mwa, Kraml:2014sna, Papucci:2014rja} can make use of the simplified model results given in the form of 95\% Confidence Level (CLs) upper limit  or efficiency maps in order to test Beyond the Standard Model parameter space. It will thus be extremely useful if the results are given in a form as easily usable by the theory community. 
 \begin{itemize}
-\item \textbf{Direct usability of the results}: The results given should be as useful as possible. For example, for a simplified model containing dark matter mass \mDM, mediator mass \Mmed and couplings \gDM, \gq it will be extremely useful to have 95\% CLs upper limits on the product of couplings $\sqrt{\gDM\gq}$ or cross section times branching ratio as a function of \mDM, \Mmed..
+\item \textbf{Direct usability of the results}: The results given should be as useful as possible. For example, for a simplified model containing dark matter mass \mDM, mediator mass \Mmed and couplings \gDM, \gq it will be extremely useful to have 95\% CLs upper limits on the product of couplings $\sqrt{\gDM\gq}$ or cross section times branching ratio as a function of \mDM, \Mmed. Limits on visible cross sections of the simplified models considered for interpretations should be made available.
 \item \textbf{Smooth grids}: The usage of simplified model results relies on interpolating between upper limit values. In order to facilitate the interpolation, regions where large variation of upper limits is observed should contain denser grid, if a uniform grid over the entire plane is not possible. For simplified model involving more than three parameters (two masses and product of couplings), slices of upper limits in the additional dimensions will be very useful e.g. for a simplified model involving one step cascade decay, upper limits can be provided for several values of intermediate mass in the plane of mother - daughter masses. Results with only one slice often render invalid to be used in a general model testing.  
 %\item Plane definitions useful for reinterpretations
-\item \textbf{Availability of efficiency maps}: Finally, efficiency maps for all the signal regions involved in the analysis should be made available. These results are not only useful for model testing using simplified models but also to validate implementation of the analysis. Information about the most sensitive signal region as a function of masses is also very useful in order to determine the validity of approximate limit setting procedures being used by theorists (in the absence of any other sophisticated limit setting technique).
+\item \textbf{Availability of acceptance and efficiency maps}: Finally, acceptance and efficiency maps for all the signal regions involved in the analysis should be made available. These results are not only useful for model testing using simplified models but also to validate implementation of the analysis. Information about the most sensitive signal region as a function of masses is also very useful in order to determine the validity of approximate limit setting procedures being used by theorists (in the absence of any other sophisticated limit setting technique). 
 \end{itemize}
