--- a/doc/tex/TChannelModels.tex
+++ b/doc/tex/TChannelModels.tex
@@ -75,6 +75,10 @@ in the limit $M_{\phi_i}, \mDM \gg m_{u_i}$.
 
 \vspace{5mm}
 
+We note that in SUSY models, the width is generally fixed by the couplings assumed in the model,
+while it could be wider in case of large \mDM, leading to different kinematic distributions between
+the two kinds of benchmarks. 
+
 The leading-order processes involved in MET+jet production are shown
 in Fig. \ref{fig:tchannelMonojet}.
 Note that the generation index for $\phi$ is linked to the incoming
@@ -112,8 +116,8 @@ In the more general theories
 considered here, $g$ is free to take on large values of order 1 or
 more, and thus diagrams neglected in MSSM simulation can occur at a
 much higher rate here. While constraints from SUSY jets+MET analyses
-on MSSM models should be translated to the specific model in this report, 
-DM searches should also test their sensitivity to the MSSM benchmark models.
+on MSSM models can be recast to apply to the specific model in this report, 
+DM searches should also directly test their sensitivity to the MSSM benchmark models.
 %study analyses directly optimized for the diagrams which
 %are relevant for large $g$.
 
