--- a/doc/tex/TTBar.tex
+++ b/doc/tex/TTBar.tex
@@ -109,7 +109,7 @@ assuming a conservative 0.1\% signal efficiency.
 The kinematics is most dependent on the masses \mdm and $m_{\phi,a}$. Figure~\ref{fig:scanPhi} 
 and~\ref{fig:scanPhiPseudo} show typical dependencies for scalar and pseudoscalar couplings respectively.
 Typically, the mediator $p_T$ spectra broadens with larger $m_{\phi,a}$. 
-The kinematics are also different between on-shell ($\mMed>2\mdm$) and off-shell ($\mMed<2\mdm$) mediators. 
+The kinematics are also different between on-shell ($\mMed>2\mdm$) and off-shell ($\mMed<2\mdm$) mediators as in Section~\ref{sec:monojet_scalar}. 
 Furthermore, the kinematic differences in \MET{} spectrum between scalar and pseudoscalar are larger for light mediator 
 masses with respect to heavier mediators. It is therefore important to  
 benchmark points covering on-shell and off-shell mediators with sufficient granularity, including the
@@ -139,7 +139,7 @@ transition region between on-shell and off-shell mediators. %, as inFig.~\ref{fi
 %\end{center}
 %\end{figure}
 
-Typically only weak dependencies on width or equivalently couplings are observed (see Fig~\ref{fig:widthsmallscan}), except for large mediator masses of $\sim 1.5\,{\rm TeV}$ or for very small couplings of $\sim 10^{-2}$. These regimes where width effects are significant have production cross sections that are too small to be relevant for $30\,{\rm fb}^{-1}$ and are not considered here. However, with the full Run-2 dataset, such models may be within reach. The weak dependence on the typical width values can be understood as the parton distribution function are the dominant effect on mediator production. In other words, for couplings $\sim O(1)$ the width is large enough that the $p_T$ of the mediator is determined mainly by the PDF.
+Typically only weak dependencies on width or equivalently couplings are observed (see Fig~\ref{fig:widthsmallscan}), except for large mediator masses of $\sim 1.5\,{\rm TeV}$ or for very small couplings of $\sim 10^{-2}$. These regimes where width effects are significant have production cross sections that are too small to be relevant for $30\,{\rm fb}^{-1}$ and are not considered here. However, with the full Run-2 dataset, such models may be within reach. The weak dependence on the typical width values can be understood as the parton distribution function are the dominant effect on mediator production. As shown in Section~\ref{sec:monojet_scaling}, for couplings $\sim O(1)$ the width is large enough that the $p_T$ of the mediator is determined mainly by the PDF.
 
 \begin{figure}[!ht]
   \begin{center}
@@ -149,7 +149,8 @@ Typically only weak dependencies on width or equivalently couplings are observed
 \end{center}
 \end{figure}
 
-Another case where the width can impact the kinematics is when $m_{\phi,a}$ is slightly larger than $2m_\chi$. Here, the width determines the relative contribution between on-shell and off-shell mediators. An example is given in Fig.~\ref{fig:widthlargescan}. 
+Another case where the width can impact the kinematics is when $m_{\phi,a}$ is slightly larger than $2m_\chi$. Here, the width determines the relative contribution between on-shell and off-shell mediators. An example is given in Fig.~\ref{fig:widthlargescan}. As the minimal width choice pursued in this document is the most conservative one, this effect can be neglected in order to reduce the number of benchmark points to be generated. 
+
 %In our recommendations we propose to use for simplicity the minimal width, as this is represents the most conservative choice to interpret the LHC results. 
 
 \begin{figure}[!ht]
