--- a/doc/tex/EWSpecificModels_EFT.tex
+++ b/doc/tex/EWSpecificModels_EFT.tex
@@ -73,7 +73,6 @@ from this category have a Lagrangian that includes terms such as:
 \frac{m_W^2}{\Lambda_5^3} ~\bar{\chiDM} \chiDM ~W^{+ \mu} W^{-}_\mu
 + \frac{m_Z^2}{2 \Lambda_5^3} ~ \bar{\chiDM} \chiDM ~ Z^\mu Z_\mu ~,
 \end{eqnarray}
-
 where $m_Z$ and $m_W$ are the masses of the $Z$ and $W$ boson, $W^{\mu}$ and $Z^{\mu}$
 are the fields of the gauge bosons, $\chiDM$ denote the Dark Matter fields
 and $\Lambda_5$ is the effective field theory scale~\Todo{The nomenclature in different models differs from literature: 
@@ -82,7 +81,7 @@ but reduce to effective dimension 5 once the Higgs vacuum expectation values,
 contained in the W and Z mass terms, are inserted.  
 As such, one expects  these that operators would naturally arise in UV complete models where Dark Matter 
 interacts via a Higgs portal where heavy mediators would couple to the Higgs or other fields in an extended Higgs sector. 
-In such models the full theory may be expected to contain additional operators with Higgs-Dark Matter couplings. 
+In such models the full theory may be expected to contain additional operators with Higgs-Dark Matter couplings~\ref{Djouadi:2012zc}.
 
 Concentrating  for the moment on mono-gauge boson signals, the above operator induces signatures with 
 \MET in conjunction with Z and W bosons at tree level,
@@ -95,7 +94,9 @@ kinematics of this model can be approximated by that of a simplified model inclu
 a high-mass scalar mediator exchanged in the \schannel described in Section~\ref{sub:EW_Scalar}. 
 For this reason, the list of benchmark models with direct boson-DM couplings for photon, Z and W 
 only includes dimension 7 operators: the scalar model with initial state radiation of an EW boson
-is already recommended and its results can be rescaled. The Higgs+\MET analysis,
+is already recommended and its results can be rescaled. 
+
+The Higgs+\MET analysis,
 however, will not consider the scalar simplified model as benchmark, due to the very low sensitivity 
 in early LHC analyses, and will instead use this dimension 5 operator. 
 
@@ -111,16 +112,18 @@ in early LHC analyses, and will instead use this dimension 5 operator.
 
 The two parameters of this model are the scale of new physics $\lambda$ 
 and the DM particle mass. SM-DM coupling and new physics scale are related by 
-$\gDM = {(246~\gev)}/{\lambda}$\Todo{Clarify the reason why this happens 
+$\gDM = {(246~\gev)}/{\lambda}$. 
+\Todo{Clarify the reason why this happens 
 	in Madgraph through explicit Lagrangian terms?}.
 
 The initial value of the new physics scale $\lambda$ chosen 
-for the sample generation is 3~\tev; this does not affect the signal kinematics, 
-and the cross-section of the samples can be rescaled according to the 
+for the sample generation is 3~\tev; this is a convention and does not affect the signal kinematics;
+\Todo{Waiting for plot by Bhawna Gomber showing this}
+the cross-section of the samples can be rescaled according to the 
 $\lambda^3$ dependence when deriving the constraints on this scale. 
 However, more care should be given when rescaling Higgs+\MET operators
 of higher dimensions, as different diagrams have a different $\lambda$  dependence. 
-\Todo{Include study of rescaling for dimension-8 operators by N. Whallon in dimension-8 section.}
+\Todo{Include unpublished study of rescaling for dimension-8 operators by N. Whallon in dimension-8 section.}
 %From Andy
 %– Lambda=3~\tev. Essentially this is an arbitrary choice for most EFTs, 
 %however it does affect the mono-H analysis as some of their models 
@@ -139,7 +142,7 @@ $$
 $$
 
 A set of kinematic distributions from the Higgs+\MET signature where the Higgs decays 
-into two $b-$quarks is shown in Fig.~\ref{eq:Lc1c2}, for points similar to those of the grid scan proposed. 
+into two $b-$quarks is shown in Fig.~\ref{fig:Hbb_Dim5}, for points similar to those of the grid scan proposed. 
   
  \begin{figure}[hbpt!]
  	\centering
@@ -168,6 +171,7 @@ into two $b-$quarks is shown in Fig.~\ref{eq:Lc1c2}, for points similar to those
  		between the Higgs boson and the DM particle, when varying the DM mass. 
  		\label{fig:Hbb_Dim5}}
  \end{figure}
+ 
  
 %%%%%%%%%%%%%Dimension 7 operators
 
