Reread Uli's email on unitarity, added one value for scalar mediator coupling scan for cross-sections
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@222 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/MonojetLikeModels.tex
+++ b/doc/tex/MonojetLikeModels.tex
@@ -750,7 +750,7 @@ The limiting case $\Gamma_{\rm{min}}=\mMed$ is shown as a black line.}
 We propose to present the results in the $\gq$--$\gDM$ plane using the following prescription:
 \begin{itemize}
 \item Since the shapes of kinematic quantities do not change for different couplings, use the acceptance and efficiency for the available $\mDM=50$~\gev, $\mMed=300$~\gev, $\gq=\gDM=1$ grid point from the $\mMed$--$\mDM$ plane for the scalar and pseudo-scalar mediator. In case of the vector and axial-vector mediator, use the grid point $\mDM=50$~\gev, $\mMed=1$~\tev, $\gq=\gDM=1$.
-\item Generate additional samples in order to get generator cross sections only. For scalar and pseudo-scalar mediator, choose $\mDM=50$~\gev, $\mMed=300$~\gev with the following values for $\gq=\gDM$: 0.1, 2, 3. For vector and axial vector mediator, choose $\mDM=50$~\gev, $\mMed=1$~\tev with the following values for $\gq=\gDM$: 0.1, 0.25, 0.5, 0.75, 1.25, 1.5. The upper values are defined by the minimal width reaching the mediator mass. \Todo{Waiting for scalar mediator calculation of perturbativity limit from J. Alcaraz.).}
+\item Generate additional samples in order to get generator cross sections only. For scalar and pseudo-scalar mediator, choose $\mDM=50$~\gev, $\mMed=300$~\gev with the following values for $\gq=\gDM$: 0.1, 1, 2, 3. For vector and axial vector mediator, choose $\mDM=50$~\gev, $\mMed=1$~\tev with the following values for $\gq=\gDM$: 0.1, 0.25, 0.5, 0.75, 1.25, 1.5. The upper values are defined by the minimal width reaching the mediator mass. \Todo{Waiting for scalar mediator calculation of perturbativity limit from J. Alcaraz.).}
 \item Rescale the generator cross sections for on-shell resonance production along the lines of constant width in order to populate the whole $\gq$--$\gDM$ plane.
 \end{itemize}
 
