--- a/doc/tex/Introduction.tex
+++ b/doc/tex/Introduction.tex
@@ -164,8 +164,9 @@ Chapter~\ref{subsec:EWSpecificModels} contains the benchmark model
 recommendations and choices for final states containing an electroweak 
 boson ($W/Z/gamma/H$). 
 Simplified models from chapter~\ref{subsec:MonojetLikeModels}
-are considered, together with contact interaction operators wherever simplified models are not available
-and specific simplified models leading to mono-boson signatures. The technical implementation and further models that can be studied
+are considered, together with specific simplified models leading to mono-boson signatures
+and contact interaction operators wherever simplified models are not available. 
+The technical implementation and further models that can be studied
 beyond early searches are in appendix~\ref{app:EWSpecificModels_Appendix}. 
 The final chapter is devoted to the treatment of the validity of benchmark
 models from contact interaction operators.
